correction orthographe Portfolio

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="list-elements"><a href="#experiences">EXPERIENCES</a></li>
                 <li class="list-elements"><a href="#skills">SKILLS</a></li>
                 <li class="list-elements"><a href="#education">EDUCATION</a></li>
-                <li class="list-elements"><a href="#portfoliot">PORT-FOLIOT</a></li>
+                <li class="list-elements"><a href="#portfolio">PORTFOLIO</a></li>
                 <li class="list-elements"><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
@@ -80,7 +80,7 @@
                             </p>
 
                             <section class="section-container">
-                                <h2 id= "portfoliot" class="title-section">PORT-FOLIOT</h2>
+                                <h2 id= "portfolio" class="title-section">PORTFOLIO</h2>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                                     Voluptas itaque recusandae culpa id libero vero nisi. 
                                     Quibusdam eveniet, unde quisquam porro laudantium 
