--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        
         <link rel="stylesheet" href="style.css" />
         <title>Ornella Borges</title>
     </head>
@@ -39,64 +38,10 @@
                     provident ipsum eligendi atque consequuntur, 
                     illum ex delectus.
                 </p>
-
-                <section class="section-container">
-                    <h2 id= "experiences"class="title-section">EXPERIENCES</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Voluptas itaque recusandae culpa id libero vero nisi. 
-                        Quibusdam eveniet, unde quisquam porro laudantium 
-                        provident ipsum eligendi atque consequuntur, 
-                        illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Voluptas itaque recusandae culpa id libero vero nisi. 
-                        Quibusdam eveniet, unde quisquam porro laudantium 
-                        provident ipsum eligendi atque consequuntur, 
-                        illum ex delectus.
-                    </p>
-
-                    <section class="section-container">
-                        <h2 id="education" class="title-section">EDUCATION</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                            Voluptas itaque recusandae culpa id libero vero nisi. 
-                            Quibusdam eveniet, unde quisquam porro laudantium 
-                            provident ipsum eligendi atque consequuntur, 
-                            illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                            Voluptas itaque recusandae culpa id libero vero nisi. 
-                            Quibusdam eveniet, unde quisquam porro laudantium 
-                            provident ipsum eligendi atque consequuntur, 
-                            illum ex delectus.
-                        </p>
-
-                        <section class="section-container">
-                            <h2 id= "skills" class="title-section">SKILLS</h2>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                Voluptas itaque recusandae culpa id libero vero nisi. 
-                                Quibusdam eveniet, unde quisquam porro laudantium 
-                                provident ipsum eligendi atque consequuntur, 
-                                illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                Voluptas itaque recusandae culpa id libero vero nisi. 
-                                Quibusdam eveniet, unde quisquam porro laudantium 
-                                provident ipsum eligendi atque consequuntur, 
-                                illum ex delectus.
-                            </p>
-
-                            <section class="section-container">
-                                <h2 id= "portfolio" class="title-section">PORTFOLIO</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                    Voluptas itaque recusandae culpa id libero vero nisi. 
-                                    Quibusdam eveniet, unde quisquam porro laudantium 
-                                    provident ipsum eligendi atque consequuntur, 
-                                    illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                                    Voluptas itaque recusandae culpa id libero vero nisi. 
-                                    Quibusdam eveniet, unde quisquam porro laudantium 
-                                    provident ipsum eligendi atque consequuntur, 
-                                    illum ex delectus.
-                                </p>
             </section>
-        </main>
-        <footer>
-            <section class="footer-container">
-                <div class=" contact-container">
-                <h2 id= "CONTACT"class="title-section">CONTACT</h2>
+
+            <section class="section-container">
+                <h2 id= "experiences"class="title-section">EXPERIENCES</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Voluptas itaque recusandae culpa id libero vero nisi. 
                     Quibusdam eveniet, unde quisquam porro laudantium 
@@ -107,7 +52,66 @@
                     provident ipsum eligendi atque consequuntur, 
                     illum ex delectus.
                 </p>
-            </div>
+            </section>
+
+            <section class="section-container">
+                <h2 id="education" class="title-section">EDUCATION</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Voluptas itaque recusandae culpa id libero vero nisi. 
+                    Quibusdam eveniet, unde quisquam porro laudantium 
+                    provident ipsum eligendi atque consequuntur, 
+                    illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Voluptas itaque recusandae culpa id libero vero nisi. 
+                    Quibusdam eveniet, unde quisquam porro laudantium 
+                    provident ipsum eligendi atque consequuntur, 
+                    illum ex delectus.
+                </p>
+            </section>
+
+            <section class="section-container">
+                <h2 id= "skills" class="title-section">SKILLS</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Voluptas itaque recusandae culpa id libero vero nisi. 
+                    Quibusdam eveniet, unde quisquam porro laudantium 
+                    provident ipsum eligendi atque consequuntur, 
+                    illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Voluptas itaque recusandae culpa id libero vero nisi. 
+                    Quibusdam eveniet, unde quisquam porro laudantium 
+                    provident ipsum eligendi atque consequuntur, 
+                    illum ex delectus.
+                </p>
+            </section>
+
+            <section class="section-container">
+                <h2 id= "portfolio" class="title-section">PORTFOLIO</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Voluptas itaque recusandae culpa id libero vero nisi. 
+                    Quibusdam eveniet, unde quisquam porro laudantium 
+                    provident ipsum eligendi atque consequuntur, 
+                    illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Voluptas itaque recusandae culpa id libero vero nisi. 
+                    Quibusdam eveniet, unde quisquam porro laudantium 
+                    provident ipsum eligendi atque consequuntur, 
+                    illum ex delectus.
+                </p>
+            </section>
+        </main>
+        <footer>
+            <section class="footer-container">
+                <div class=" contact-container">
+                    <h2 id= "CONTACT"class="title-section">CONTACT</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Voluptas itaque recusandae culpa id libero vero nisi. 
+                        Quibusdam eveniet, unde quisquam porro laudantium 
+                        provident ipsum eligendi atque consequuntur, 
+                        illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Voluptas itaque recusandae culpa id libero vero nisi. 
+                        Quibusdam eveniet, unde quisquam porro laudantium 
+                        provident ipsum eligendi atque consequuntur, 
+                        illum ex delectus.
+                    </p>
+                </div>
+            </section>
         </footer>
     </body>
 </html>
