--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" href="reset.css" />
+        <script defer src="script.js"></script>
         <title>Ornella Borges</title>
     </head>
     <body>
