--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </header>
 
-        <nav class="nav">
+        <nav class="nav menu">
             <ul class="list">
                 <li class="list-elements" title="blablabla"><a href="#about">ABOUT</a></li>
                 <li class="list-elements"><a href="#experiences">EXPERIENCES</a></li>
