--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2 id="about" class="title-section">ABOUT</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Voluptas itaque recusandae culpa id libero vero nisi. 
-                    Quibusdam eveniet, unde quisquam porro laudantium 
+                    Quibusdam eveniet, quisquam porro laudantium 
                     provident ipsum eligendi atque consequuntur, 
                     illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Voluptas itaque recusandae culpa id libero vero nisi. 
