--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li class="list-elements"><a href="#skills">SKILLS</a></li>
                 <li class="list-elements"><a href="#education">EDUCATION</a></li>
                 <li class="list-elements"><a href="#portfolio">PORTFOLIO</a></li>
+                <li class="list-elements"><a href="#interest">INTEREST</a></li>
                 <li class="list-elements"><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
