--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css" />
-        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/reset.css" />
         <script defer src="script.js"></script>
         <title>Ornella Borges</title>
     </head>
@@ -20,7 +20,8 @@
         </header>
 
         <nav class="nav">
-            <ul class="list">
+
+            <ul class="list"> <!--faire la liste en grid-->
                 <li class="list-elements" title="blablabla"><a href="#about">ABOUT</a></li>
                 <li class="list-elements"><a href="#experiences">EXPERIENCES</a></li>
                 <li class="list-elements"><a href="#skills">SKILLS</a></li>
@@ -30,6 +31,17 @@
                 <li class="list-elements"><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
+
+        <div class="grille">
+            <div class="grille-element"></div>
+            <div class="grille-element"></div>
+            <div class="grille-element"></div>
+            <div class="grille-element"></div>
+            <div class="grille-element"></div>
+            <div class="grille-element"></div>
+            <div class="grille-element"></div>
+        </div>
+        
         <main>
             <section class="section-container">
                 <h2 id="about" class="title-section">ABOUT</h2>
@@ -87,7 +99,7 @@
                 </p>
             </section>
 
-            <section class="section-container">
+            <section class="section-container"> <!--faire la liste en grid-->
                 <h2 id="portfolio" class="title-section">PORTFOLIO</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Voluptas itaque recusandae culpa id libero vero nisi. 
