change grid template

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         </nav>
 
         <div class="grille">
-            <div class="grille-element"></div>
-            <div class="grille-element"></div>
-            <div class="grille-element"></div>
-            <div class="grille-element"></div>
-            <div class="grille-element"></div>
-            <div class="grille-element"></div>
-            <div class="grille-element"></div>
+            <div class="grille-items"><a class= "link-section" href="#about">ABOUT</a></div>
+            <div class="grille-items"><a class= "link-section" href="#experiences">EXPERIENCES</a></div>
+            <div class="grille-items"><a class= "link-section" href="#skills">SKILLS</a></div>
+            <div class="grille-items"><a class= "link-section" href="#education">EDUCATION</a></div>
+            <div class="grille-items"><a class= "link-section" href="#portfolio">PORTFOLIO</a></div>
+            <div class="grille-items"><a class= "link-section" href="#interest">INTEREST</a></div>
+            <div class="grille-items"><a class= "link-section" href="#contact">CONTACT</a></div>
         </div>
         
         <main>
