--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     provident ipsum eligendi atque consequuntur, 
                     illum ex delectus.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Voluptas itaque recusandae culpa id libero vero nisi. 
-                    Quibusdam eveniet, unde quisquam porro laudantium 
+                    Quibusdam eveniet, quisquam porro laudantium 
                     provident ipsum eligendi atque consequuntur, 
                     illum ex delectus.
                 </p>
